result/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: voting-app-result-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - image: dockersamples/examplevotingapp_result
          name: result
          ports:
            - containerPort: 80
              name: result
