result/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: result
  name: voting-app-result
spec:
  containers:
    - name: voting-app-result-container
      image: dockersamples/examplevotingapp_result
      ports:
        - containerPort: 80
          name: result
